[package]
name = "job_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
reqwest = { version =  "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
